--- a/[x] Science!.csproj
+++ b/[x] Science!.csproj
@@ -56,6 +56,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ScienceChecklistAddon.cs" />
+    <Compile Include="ScienceWindow.cs" />
     <Compile Include="ToolbarButton.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
