--- a/[x] Science!.csproj
+++ b/[x] Science!.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Experiment.cs" />
+    <Compile Include="ExperimentFilter.cs" />
     <Compile Include="ScienceChecklistAddon.cs" />
     <Compile Include="ScienceWindow.cs" />
     <Compile Include="StreamEx.cs" />
@@ -67,6 +68,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="scienceProgress.png" />
     <EmbeddedResource Include="icon.png" />
     <Content Include="LICENSE.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
