ScienceWindow: Changed filter to have activeVessel/unlocked/all options.

--- a/[x] Science!.csproj
+++ b/[x] Science!.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DisplayMode.cs" />
     <Compile Include="Experiment.cs" />
     <Compile Include="ExperimentFilter.cs" />
     <Compile Include="ScienceChecklistAddon.cs" />
