--- a/[x] Science!.csproj
+++ b/[x] Science!.csproj
@@ -36,9 +36,11 @@
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\Stock 0.25.0\KSP_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Assembly-CSharp-firstpass">
       <HintPath>..\..\Stock 0.25.0\KSP_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="MiniAVC">
       <HintPath>Libraries\MiniAVC-1.0.2.3\MiniAVC.dll</HintPath>
@@ -47,6 +49,7 @@
     <Reference Include="System.Core" />
     <Reference Include="UnityEngine">
       <HintPath>..\..\Stock 0.25.0\KSP_Data\Managed\UnityEngine.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
