--- a/[x] Science!.csproj
+++ b/[x] Science!.csproj
@@ -70,6 +70,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="scienceComplete.png" />
     <EmbeddedResource Include="scienceProgress.png" />
     <EmbeddedResource Include="icon.png" />
     <Content Include="LICENSE.txt">
