--- a/[x] Science!.csproj
+++ b/[x] Science!.csproj
@@ -60,6 +60,7 @@
     <Compile Include="ScienceWindow.cs" />
     <Compile Include="Situation.cs" />
     <Compile Include="StreamEx.cs" />
+    <Compile Include="TextureHelper.cs" />
     <Compile Include="ToolbarButton.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -74,6 +75,15 @@
     <EmbeddedResource Include="scienceComplete.png" />
     <EmbeddedResource Include="scienceProgress.png" />
     <EmbeddedResource Include="icon.png" />
+    <EmbeddedResource Include="icons\all.png" />
+    <EmbeddedResource Include="icons\clearSearch.png" />
+    <EmbeddedResource Include="icons\currentSituation.png" />
+    <EmbeddedResource Include="icons\currentVessel.png" />
+    <EmbeddedResource Include="icons\hideComplete.png" />
+    <EmbeddedResource Include="icons\search.png" />
+    <EmbeddedResource Include="icons\settings.png" />
+    <EmbeddedResource Include="icons\showComplete.png" />
+    <EmbeddedResource Include="icons\unlocked.png" />
     <Content Include="LICENSE.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
