Now calls the expensive OnScienceReceived method far less frequently. Renamed it to RefreshExperimentCache. The updating of the existing experiments is done by UpdateScience now.

--- a/[x] Science!.csproj
+++ b/[x] Science!.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Experiment.cs" />
     <Compile Include="ExperimentalFeatures.cs" />
     <Compile Include="ExperimentFilter.cs" />
+    <Compile Include="GameHelper.cs" />
     <Compile Include="ScienceChecklistAddon.cs" />
     <Compile Include="ScienceWindow.cs" />
     <Compile Include="SettingsPanel.cs" />
