--- a/[x] Science!.csproj
+++ b/[x] Science!.csproj
@@ -53,6 +53,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Buttons\BlizzysToolbarButton.cs" />
+    <Compile Include="Buttons\IToolbarButton.cs" />
     <Compile Include="DisplayMode.cs" />
     <Compile Include="Experiment.cs" />
     <Compile Include="ExperimentalFeatures.cs" />
@@ -64,9 +66,10 @@
     <Compile Include="Situation.cs" />
     <Compile Include="StreamEx.cs" />
     <Compile Include="TextureHelper.cs" />
-    <Compile Include="ToolbarButton.cs" />
+    <Compile Include="Buttons\AppLauncherButton.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Buttons\ToolbarWrapper.cs" />
     <None Include="CHANGES.md" />
     <None Include="Deploy.cs">
       <AutoGen>True</AutoGen>
@@ -89,6 +92,7 @@
     <EmbeddedResource Include="icons\unlocked.png" />
     <EmbeddedResource Include="icons\maximize.png" />
     <EmbeddedResource Include="icons\minimize.png" />
+    <EmbeddedResource Include="icon-small.png" />
     <Content Include="LICENSE.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
